--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -8,10 +8,10 @@ This paper introduces TokenID, a proposal to improve the security of decentraliz
 ## Introduction
 
 ## 1.1 Background
-In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by enhancing token standards with off-chain metadata, secure metadata updates, cross-chain compatibility, and signed JSON data.
+In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by enhancing token standards with off-chain metadata, secure metadata updates, cross-chain compatibility, and signed JSON data; that offer omogenous data indepently of the host blockchain. 
 
 ## 1.2 Objectives
-TokenID aims to establish a more secure and versatile token ecosystem by incorporating off-chain metadata, secure metadata updates, cross-chain compatibility, and a signed JSON data format. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
+TokenID aims to establish a more secure and versatile token ecosystem by incorporating off-chain metadata, secure metadata updates, multi-chain compatibility, and a signed JSON data format. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
 
 ## The Importance of Off-Chain Metadata, Cross-Chain Compatibility, and JSON Structure
  
