--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -29,7 +29,7 @@ TokenID enables the inclusion of tokens from different blockchains, promoting in
 ## Protocol Overview: Off-Chain Metadata Integration, Secure Metadata Updates, and JSON Structure  
 
 ## 3.1 API Service Architecture
-TokenID generates an open-source API service as a gateway for accessing off-chain metadata. Standardized APIs allow querying applications to request token-specific information, that can be independtly verified.   
+TokenID generates an open-source API service as a gateway for accessing off-chain metadata. Standardized API calls allows querying applications to request token-specific information, that can be independtly verified.   
 
 ## 3.2 Token Owner Access and Secure Metadata Updates
 
