--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -54,6 +54,7 @@ TokenID implements a signed JSON format for token metadata. The JSON structure d
         "twitter": "https://twitter.com/mytoken"
     }
 },
+"signatureType": "evm",
 "signature": "0xabc123def456..."
 }
 ```
