--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -83,6 +83,7 @@ One of the key security benefits of TokenID is its ability to provide early aler
 TokenID also includes mechanisms to red flag suspicious assets within the token ecosystem. Through the signed JSON format and integration with third-party platforms, TokenID allows for the identification and monitoring of tokens that exhibit suspicious characteristics. This feature helps users and platform providers to exercise caution when dealing with potentially risky or suspicious tokens, contributing to a safer and more secure token environment.
 
 ## Conclusion
-The TokenID protocol presents a comprehensive solution for enhancing tokens with off-chain metadata, secure metadata updates, cross-chain compatibility, signed JSON format. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a signed JSON format and token deployer's signature facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, security, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verifiable and up-to-date token information.
+The TokenID protocol presents a comprehensive solution for enhancing tokens with off-chain metadata, secure metadata updates, cross-chain compatibility, signed JSON format. 
 
-The resulsting data allows for a more complete represntation of the tokens that exists on the wider crypto ecosystem, and is not limited to an unique chain, and set of chains, or even a technoclogy. As it can cover all of them, indepdently. 
+The resulting comulative data set allows for a more complete represntation of the tokens that exists on the wider crypto ecosystem, and is not limited to an unique chain, set of chains, or even a single underlaying technoclogy. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a signed JSON format and token deployer's signature facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, security, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verifiable and up-to-date token information.
+
