change json structure

--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -44,6 +44,8 @@ TokenID implements a signed JSON format for token metadata. The JSON structure d
 "blockChainID": "ethereum",    
 "tokenDeployer": "0xabcdef123456789",
 "contractAddress": "0x123456789abcdef",
+"signatureType": "evm",
+"signature": "0xabc123def456...",
 "metadata": {
     "description": "MyToken is a decentralized digital currency...",
     "logoUrl": "https://example.com/mytoken-logo.png",
@@ -54,8 +56,6 @@ TokenID implements a signed JSON format for token metadata. The JSON structure d
         "twitter": "https://twitter.com/mytoken"
     }
 },
-"signatureType": "evm",
-"signature": "0xabc123def456..."
 }
 ```
 
