--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -85,5 +85,5 @@ TokenID also includes mechanisms to red flag suspicious assets within the token 
 ## Conclusion
 The TokenID protocol presents a comprehensive solution for enhancing tokens with off-chain metadata, secure metadata updates, cross-chain compatibility, signed JSON format. 
 
-The resulting comulative data set allows for a more complete represntation of the tokens that exists on the wider crypto ecosystem, and is not limited to an unique chain, set of chains, or even a single underlaying technoclogy. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a signed JSON format and token deployer's signature facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, security, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verifiable and up-to-date token information.
+The resulting comulative data set allows for a more complete representation of the tokens that exists on the wider crypto ecosystem, and is not limited to an unique chain, set of chains, or even a underlaying technoclogy. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a signed JSON format and token deployer's signature facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, security, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verifiable and up-to-date token information.
 
