--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -79,7 +79,7 @@ One of the key security benefits of TokenID is its ability to provide early aler
 TokenID also includes mechanisms to red flag suspicious assets within the token ecosystem. Through the signed JSON and integration with third-party platforms, TokenID allows for the identification and monitoring of tokens that exhibit suspicious characteristics. This feature helps users and platform providers to exercise caution when dealing with potentially risky or suspicious tokens, contributing to a safer and more secure token environment.
 
 ## Conclusion
-The TokenID protocol presents a comprehensive solution for enhancing tokens with off-chain metadata, secure metadata updates, cross-chain compatibility and signed JSON. 
+The TokenID protocol presents a comprehensive solution for enhancing tokens with off-chain metadata, secure metadata updates, multi-chain compatibility and signed JSON. 
 
 The resulting comulative data set allows for a complete representation of the tokens that exists on the wide crypto ecosystem, and is not limited to a single underlaying technoclogy. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a JSON signed by the token deployer's  facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, security, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verifiable and up-to-date token information.
 
