--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -3,24 +3,24 @@
 ## Securing blockchain tokens with Off-Chain Metadata
 
 ## Abstract:
-This paper introduces TokenID, a proposal to improve decentralized tokens with the integration of off-chain metadata. TokenID generates a API service providing signed JSON data structures, enabling various integration possibilities for crypto projects. By incorporating off-chain metadata, TokenID increases security, ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The signed JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms; while making data updates easy and secure. 
+This paper introduces TokenID, a proposal to improve decentralized tokens with the integration of off-chain metadata. TokenID generates a API service providing signed JSON data structures, enabling various integration possibilities for crypto projects. By incorporating off-chain metadata; TokenID increases security, ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The signed JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms; while making data updates easy and secure. 
 
 ## Introduction
 
-In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by enhancing token standards with off-chain metadata, secure metadata updates, multi-chain compatibility, and signed JSON data; that offer omogenous data indepently of the host blockchain. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
+In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by enhancing token standards with off-chain metadata, secure metadata updates, multi-chain compatibility, and signed JSON data; that offer homogeneous data indepently of the host blockchain. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
 
 ## The Importance of Off-Chain Metadata, Cross-Chain Compatibility, and JSON Structure
  
 ## 2.1 Trustworthiness Verification
-Ensuring token legitimacy and trustworthiness requires additional verification mechanisms beyond the blockchain. The integration of off-chain metadata provides an extra layer of transparency, empowering users to assess a token's authenticity and trust.  
+Ensuring token legitimacy and trustworthiness requires additional verification mechanisms beyond the blockchain. The integration of off-chain metadata provides an extra layer of transparency, empowering users to assess a token's authenticity and trustworthiness.  
 
 ## 2.2 Limitations of On-Chain Storage for Metadata
 
 ### 2.2.1 Support for New Token Standards
-TokenID is designed to accommodate the evolving blockchain landscape and supports the seamless integration of new token standards. By adopting an off-chain approach for metadata storage, TokenID can adapt to emerging standards without requiring extensive modifications to the underlying infrastructure.
+TokenID is designed to accommodate the evolving blockchain landscape and supports the seamless integration of new token standards. By adopting an off-chain approach for metadata storage, TokenID can adapt to emerging token standards without requiring extensive modifications to the underlying infrastructure.
 
 ### 2.2.2 Multi-Chain Compatibility
-TokenID enables the inclusion of tokens from different blockchains, promoting interoperability. Further, the inclusion of multiple of the same token representations across chains improve transparency and security. Through a single API service, the ecosystem can access token metadata for tokens deployed on various blockchains, facilitating seamless interaction. Metada remains indepdent of the underalying token technology, and present an omogenous data set.
+TokenID enables the inclusion of tokens from different blockchains, promoting interoperability. Further, the inclusion of multiple of the same token representations across chains improve transparency and security. Through a single API service, the ecosystem can access token metadata for tokens deployed on various blockchains, facilitating seamless interaction. Metada remains indepdent of the underalying token technology, and present an homogeneous data set.
 
 ## Protocol Overview: Off-Chain Metadata Integration, Secure Metadata Updates, and JSON Structure  
 
@@ -30,7 +30,7 @@ TokenID generates an open-source API service as a gateway for accessing off-chai
 ## 3.2 Token Owner Access and Secure Metadata Updates
 
 ### 3.2.1 Secure Metadata Updates
-Token owners can securely update their token's metadata by providing a newly signed message of the JSON data structure containig the metadata. This ensures that metadata remains up to date and accurate, enhancing trust and transparency within the token ecosystem; while also maintaining the tokens keys secure. The TokenID protocol leverages robust security measures to ensure the integrity and authenticity of metadata updates. By utilizing cryptographic mechanisms, token owners can securely authenticate themselves without relying on traditional less secure methods. 
+Token owners can securely update their token's metadata by providing a newly signed message of the JSON data structure containing the metadata. This ensures that metadata remains up to date and accurate, enhancing trust and transparency within the token ecosystem; while also maintaining the tokens keys secure. The TokenID protocol leverages robust security measures to ensure the integrity and authenticity of metadata updates. By utilizing cryptographic mechanisms, token owners can securely authenticate themselves without relying on traditional less secure methods. 
 
 ## 3.3 JSON Data Structure
 TokenID implements a signed JSON for token metadata. The JSON structure defines key-value pairs to represent essential metadata elements, including blockchain,  deployer address,  contract address, liquidity pool address, logo image URL, token description, explorer verification code, social profile links. This standardized format ensures compatibility and ease of integration with various applications, across multiple chains. The encompassing signature generated by the owner of the token, means the data is trustworthy. Generating the data and its signature is easy, and can be done securely by the token owner without depedence of any third party services. 
@@ -65,7 +65,7 @@ TokenID enables smooth integration with wallet providers, allowing them to displ
 DEFI paltforms like Uniswap, can leverage the addresses provided in the metadata to access liquidity pool information and facilitate token swaps. By integrating TokenID's metadata into AMM platforms, the trading experience becomes more streamlined and simplified. Users can benefit from the enriched token data and make informed decisions when engaging in token swaps through AMMs.
 
 ## 4.3 Integration with Cryptocurrency Information Websites
-TokenID also offers integration opportunities with cryptocurrency information websites such as CoinMarketCap. These websites can leverage the standardized JSON metadata obtained from TokenID to provide accurate and up-to-date token information to their users. By incorporating TokenID's off-chain metadata, these websites enhance the reliability and completeness of the token data they present, fostering trust and facilitating informed decision-making for cryptocurrency enthusiasts.
+TokenID also offers integration opportunities with cryptocurrency information websites such as CoinMarketCap and similar platforms. These websites can leverage the standardized JSON metadata obtained from TokenID to provide accurate and up-to-date token information to their users. By incorporating TokenID's off-chain metadata, these websites enhance the reliability and completeness of the token data they present, fostering trust and facilitating informed decision-making for cryptocurrency enthusiasts.
 
 The integration with third-party platforms, including wallets, AMMs, and cryptocurrency information websites, broadens TokenID's reach, fosters wider adoption, and creates a more robust ecosystem for decentralized tokens. It empowers users with access to verifiable token information across multiple platforms, ultimately driving transparency, trust, and seamless interactions within the token ecosystem.
 
@@ -81,5 +81,5 @@ TokenID also includes mechanisms to red flag suspicious assets within the token 
 ## Conclusion
 The TokenID protocol presents a comprehensive solution for enhancing tokens with off-chain metadata, secure metadata updates, multi-chain compatibility and signed JSON. 
 
-The resulting comulative data set allows for a complete representation of the tokens that exists on the wide crypto ecosystem, and is not limited to a single underlaying technoclogy. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a JSON signed by the token deployer's  facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, security, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verifiable and up-to-date token information.
+The resulting comulative data set allows for a complete representation of the tokens that exists on the wide crypto ecosystem, and is not limited to a single underlaying technology. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a JSON signed by the token deployer's  facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, security, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verified and up-to-date token information.
 
