--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -7,7 +7,7 @@ This paper introduces TokenID, a proposal to improve decentralized tokens with t
 
 ## Introduction
 
-In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by enhancing token standards with off-chain metadata, secure metadata updates, multi-chain compatibility, and signed JSON data; that offer homogeneous data indepently of the host blockchain. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
+In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by enhancing token standards with off-chain metadata, secure metadata updates, multi-chain compatibility, and signed JSON data; that offer homogeneous data independently of the host blockchain. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
 
 ## The Importance of Off-Chain Metadata, Cross-Chain Compatibility, and JSON Structure
  
@@ -51,7 +51,7 @@ TokenID implements a signed JSON for token metadata. The JSON structure defines 
     "socialProfiles": {
         "twitter": "https://twitter.com/mytoken"
     }
-},
+}
 }
 ```
 
@@ -62,7 +62,7 @@ TokenID offers seamless integration with various third-party platforms, expandin
 TokenID enables smooth integration with wallet providers, allowing them to display comprehensive token information to users. Wallets can incorporate the JSON metadata obtained through the API service, which includes essential details such as the token description, social profile links,  liquidity pool address, and coin logo image URLs. This integration significantly enhances the user experience by providing detailed insights into the token and empowering users with comprehensive information.
 
 ## 4.2 DEFI platforms Integration and Streamlined Trading
-DEFI paltforms like Uniswap, can leverage the addresses provided in the metadata to access liquidity pool information and facilitate token swaps. By integrating TokenID's metadata into AMM platforms, the trading experience becomes more streamlined and simplified. Users can benefit from the enriched token data and make informed decisions when engaging in token swaps through AMMs.
+DEFI platforms like Uniswap, can leverage the addresses provided in the metadata to access liquidity pool information and facilitate token swaps. By integrating TokenID's metadata into AMM platforms, the trading experience becomes more streamlined and simplified. Users can benefit from the enriched token data and make informed decisions when engaging in token swaps through AMMs.
 
 ## 4.3 Integration with Cryptocurrency Information Websites
 TokenID also offers integration opportunities with cryptocurrency information websites such as CoinMarketCap and similar platforms. These websites can leverage the standardized JSON metadata obtained from TokenID to provide accurate and up-to-date token information to their users. By incorporating TokenID's off-chain metadata, these websites enhance the reliability and completeness of the token data they present, fostering trust and facilitating informed decision-making for cryptocurrency enthusiasts.
@@ -81,5 +81,5 @@ TokenID also includes mechanisms to red flag suspicious assets within the token 
 ## Conclusion
 The TokenID protocol presents a comprehensive solution for enhancing tokens with off-chain metadata, secure metadata updates, multi-chain compatibility and signed JSON. 
 
-The resulting comulative data set allows for a complete representation of the tokens that exists on the wide crypto ecosystem, and is not limited to a single underlaying technology. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a JSON signed by the token deployer's  facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, security, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verified and up-to-date token information.
+The resulting cumulative data set allows for a complete representation of the tokens that exists on the wide crypto ecosystem, and is not limited to a single underlaying technology. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a JSON signed by the token deployer's  facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, security, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verified and up-to-date token information.
 
