--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -9,7 +9,7 @@ This paper introduces TokenID, a proposal to improve decentralized tokens with t
 
 In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by extending token standards with off-chain metadata, secure metadata updates, multi-chain compatibility, and signed JSON data; that offer homogeneous data independently of the host blockchain. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
 
-## The Importance of Off-Chain Metadata, Cross-Chain Compatibility, and JSON Structure
+## The Importance of Off-Chain Metadata, Multi-Chain Compatibility, and signed JSON data
  
 ## 2.1 Trustworthiness Verification
 Ensuring token legitimacy and trustworthiness requires additional verification mechanisms beyond the blockchain. The integration of off-chain metadata provides an extra layer of transparency, empowering users to assess a token's authenticity and trustworthiness.  
