--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -15,6 +15,7 @@ In the blockchain landscape, the need to verify token authenticity and ensure tr
 Ensuring token legitimacy and trustworthiness requires additional verification mechanisms beyond the blockchain. The integration of off-chain metadata provides an extra layer of transparency, empowering users to assess a token's authenticity and trustworthiness.  
 
 ## 2.2 Limitations of On-Chain Storage for Metadata
+On-chain storage for metadata has limitations due to several factors. Storing metadata directly on the blockchain increases transaction costs and blockchain size. It also restricts the size and complexity of metadata and hinders scalability. Off-chain storage allows for easier adaptation to emerging token standards and enables efficient updates while maintaining integrity and security.
 
 ### 2.2.1 Support for New Token Standards
 TokenID is designed to accommodate the evolving blockchain landscape and supports the seamless integration of new token standards. By adopting an off-chain approach for metadata storage, TokenID can adapt to emerging token standards without requiring extensive modifications to the underlying infrastructure.
