--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -17,10 +17,10 @@ Ensuring token legitimacy and trustworthiness requires additional verification m
 ## 2.2 Limitations of On-Chain Storage for Metadata
 On-chain storage for metadata has limitations due to several factors. Storing metadata directly on the blockchain increases transaction costs and blockchain size. It also restricts the size and complexity of metadata and hinders scalability. Off-chain storage allows for easier adaptation to emerging token standards and enables efficient updates while maintaining integrity and security.
 
-### 2.2.1 Support for New Token Standards
+## 2.2 Support for New Token Standards
 TokenID is designed to accommodate the evolving blockchain landscape and supports the seamless integration of new token standards. By adopting an off-chain approach for metadata storage, TokenID can adapt to emerging token standards without requiring extensive modifications to the underlying infrastructure.
 
-### 2.2.2 Multi-Chain Compatibility
+## 2.2 Multi-Chain Compatibility
 TokenID enables the inclusion of tokens from different blockchains, promoting interoperability. Further, the inclusion of multiple of the same token representations across chains improve transparency and security. Through a single API service, the ecosystem can access token metadata for tokens deployed on various blockchains, facilitating seamless interaction. Metada remains independent of the underalying token technology, and presents an homogeneous data set.
 
 ## Protocol Overview: Off-Chain Metadata Integration, Secure Metadata Updates, and JSON Structure  
