--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -1,6 +1,6 @@
 # TokenID
 
-## Securing blockchain tokens with Off-Chain Metadata
+## Extending blockchain tokens with Off-Chain Metadata
 
 ## Abstract:
 This paper introduces TokenID, a proposal to improve decentralized tokens with the integration of off-chain metadata. TokenID generates an API service that provides digitally signed JSON data; enabling various integration possibilities for crypto projects. By incorporating off-chain metadata; TokenID increases security, ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The signed JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms; while making data updates easy and secure. 
