--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -8,7 +8,7 @@ This paper introduces TokenID, a proposal to improve decentralized tokens with t
 ## Introduction
 In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by extending token standards with off-chain metadata, secure metadata updates, multi-chain compatibility, and signed JSON data; that offer homogeneous data independently of the host blockchain. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
 
-## The Importance of Off-Chain Metadata, Multi-Chain Compatibility, and signed JSON data
+## Off-Chain Metadata, Multi-Chain Compatibility, and signed JSON data
 Storing metadata directly on the blockchain has inherent limitations. It confines the data to the blockchain's local domain, limiting its accessibility and adaptability. Moreover, on-chain storage leads to increased transaction costs and blockchain size, and it imposes restrictions on the size and complexity of metadata, hindering scalability. In contrast, off-chain storage offers advantages such as easier adaptation to emerging token standards, efficient updates, and the ability to maintain integrity and security while overcoming the limitations of on-chain storage.
 
 ## 2.1 Trustworthiness Verification
