--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -81,3 +81,5 @@ The TokenID protocol presents a comprehensive solution for enhancing tokens with
 
 The resulting cumulative data set allows for a complete representation of the tokens that exists on the wide crypto ecosystem, and is not limited to a single underlaying technology. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a JSON signed by the token deployer's  facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, security, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verified and up-to-date token information.
 
+## References:
+https://www.reddit.com/r/ethereum/comments/146zfj6/why_did_the_erc20_token_standard_not_include/
