--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -18,7 +18,7 @@ Ensuring token legitimacy and trustworthiness requires additional verification m
 TokenID is designed to accommodate the evolving blockchain landscape and supports the seamless integration of new token standards. By adopting an off-chain approach for metadata storage, TokenID can adapt to emerging token standards without requiring extensive modifications to the underlying infrastructure.
 
 ## 2.3 Multi-Chain Compatibility
-TokenID enables the inclusion of tokens from different blockchains, promoting interoperability. Further, the inclusion of multiple of the same token representations across chains improve transparency and security. Through a single API service, the ecosystem can access token metadata for tokens deployed on various blockchains, facilitating seamless interaction. Metada remains independent of the underalying token technology, and presents an homogeneous data set.
+TokenID simplifies the process of reading data from different types of blockchains by providing a unified solution. Instead of relying on different libraries and complex code dependencies, TokenID enables the inclusion of tokens from various blockchains, promoting interoperability. Additionally, by including multiple representations of the same token across chains, TokenID enhances transparency and security. Through a single API service, the ecosystem can easily access token metadata for tokens deployed on different blockchains, facilitating seamless interaction. The metadata remains independent of the underlying token technology, creating a homogeneous dataset that is accessible and consistent across multiple chains.
 
 ## Protocol Overview: Off-Chain Metadata Integration, Secure Metadata Updates, and JSON Structure  
 
